# baytech-website

./: .env copy  .gitignore  .pre-commit-config.yaml  172.16.26.17_attendance_data.csv  172.16.26.17_finger_data.csv  172.16.26.17_user_data.csv  172.16.26.20_attendance_data.csv  172.16.26.21_user_data.csv  Dockerfile  README.md  build-poetry.sh  credential.txt  docker-compose.copy  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirement2.txt  requirements.txt
base/: admin.py  forms.py  mixins.py  models.py  pdf_render.py  permissions.py  renderers.py  serializers.py  tests.py  views.py  xlsx_writter.py
base/authenticator/: auth.py
base/helpers/: decorators.py  func.py  query.py  token_generator.py  utils.py  validators.py
base/middleware/: __init__.py  pass_change.py  public_urls.py  response.py
base/templatetags/: custom_tags.py
core/: load_vars.py  settings.py  urls.py  views.py
core/apis/: renderers.py
notice/: models.py  urls.py  views.py
notice/migrations/: 0001_initial.py
page/: forms.py  models.py  urls.py  views.py
page/migrations/: 0001_initial.py  0002_project_proejct_category_alter_project_proejct_type.py  0003_remove_project_publish_date_newsinsight.py  0004_contactus_teammember_jobpost.py  0007_dockingcertificate.py  (+4 more)
static/: custom.css  style.css
ta_device/: apps.py  models.py  scheduler.py  urls.py
templates/: base.html  basic.html  dashboard_base.html  home-1.html  home-corporate.html  home.html  homepage.html  login_base.html  sidebar.html
user/: forms.py  models.py  serializers.py  urls.py  urls_api.py
(+506 files in other folders)
