[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Fahad-Myalice <fahad@myalice.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
psycopg2-binary = "^2.9.10"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.7.0"
django-extensions = "^3.2.3"
celery = "^5.4.0"
pyjwt = "^2.10.1"
django-filter = "^25.1"
django-debug-toolbar = "^5.0.1"
django-crispy-forms = "^2.3"
django-redis = "^5.4.0"
django-simple-history = "^3.8.0"
django-cacheops = "^7.1"
dateutils = "^0.6.12"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"
sendgrid = "^6.11.0"
boto3 = "^1.36.26"
firebase-admin = "^6.6.0"
apscheduler = "^3.11.0"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"
xhtml2pdf = "^0.2.17"
django-tinymce = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
